add service wisudaRepository

--- a/Resources/config/doctrine/Wisuda.orm.yml
+++ b/Resources/config/doctrine/Wisuda.orm.yml
@@ -1,6 +1,7 @@
 Ais\WisudaBundle\Entity\Wisuda:
  type: entity
  table: wisuda
+ repositoryClass: Ais\WisudaBundle\Repository\WisudaRepository
  id:
   id: 
    type: integer
